1-jenkins/templates/jenkins-deployment.yaml
# Deployment for the Jenkins

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: perf-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenkins
          image: jenkins/jenkins:lts
          resources:
            requests:
              cpu: "500m"
              memory: "1024Mi"
            limits:
              cpu: "500m"
              memory: "1024Mi"
          ports:
            - name: http-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
          volumeMounts:
            - name: jenkins-vol
              mountPath: /var/jenkins_home
      volumes:
        - name: jenkins-vol
          persistentVolumeClaim:
            claimName: jenkins-pv-claim
      restartPolicy: Always
