1-jenkins/templates/jenkins-slaves-service.yaml
# ClusterIP for the Jenkins-jnlp

apiVersion: v1
kind: Service
metadata:
  name: jenkins-slaves
  namespace: perf-platform
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 50000
      targetPort: 50000
      name: slaves
  selector:
    app: jenkins
