1-jenkins/templates/jenkins-ui-service.yaml
#Node Port service for the Jenkins Deployment

apiVersion: v1
kind: Service
metadata:
  name: jenkins-ui
  namespace: perf-platform
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8080
  selector:
    app: jenkins
  externalIPs: 
    - 172.20.144.1
